[package]
name = "io-read-line-prototype"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/io-read-line-prototype"
documentation = "https://docs.rs/io-read-line-prototype"
description = "Prototype for io::read_line"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]

[features]

[dependencies]

[dev-dependencies]
